--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -229,7 +229,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnDone"
+                android:id="@+id/button_change_cancel"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -237,7 +237,7 @@
                 android:text="취소" />
 
             <Button
-                android:id="@+id/btnCancel"
+                android:id="@+id/button_change_done"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
